added basic route and swagger definition
