# src/controllers/scrap/scrap.controller.ts
@@ -3,6 +3,8 @@ import asyncHandler from '../../utils/router.methods'
 import globalResponseHandler from '../../utils/global/response.handler'
 import { ScrappingService } from '../../services/scrapping/scrapping.service'
 import { HttpStatusCode } from 'axios'
+import validateRequestBody from '../../middlewares/validate.request.body.mw'
+import { ScrapUsingUrlsValidator } from '../../validators/scrap.using.urls.validator'
 
 const scrapRouter = Router()
 
@@ -10,18 +12,27 @@ const scrappingService = new ScrappingService()
 // router functions
 scrapRouter.post(
     '/',
+    validateRequestBody(ScrapUsingUrlsValidator),
     asyncHandler(async (req, res) => {
     // #swagger.tags = ['Scrapping']
-    //  #swagger.description = 'APIs for scrapping.'
-    /* #swagger.responses[200] = {
-                                     data: 'App Home.',
-                                 } */
+    //  #swagger.description = 'API to scrap data from a using URL.'
+    /*  #swagger.requestBody = {
+                     required: true,
+                        content: {
+                            'application/json': {
+                                schema: {
+                                    $ref: '#/definitions/URLToContentsModel',
+                                },
+                            },
+                        },
+                   }
+               */
         return globalResponseHandler(
             req,
             res,
             HttpStatusCode.Ok,
             'App Home',
-            await scrappingService.scrap(),
+            await scrappingService.scrap(req.body?.urls as string[]),
         )
     }),
 )
