# swagger.json
@@ -1,14 +1,15 @@
 {
-  "swagger": "2.0",
+  "swagger": "1.0",
+  "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
     "title": "REST API",
     "description": ""
   },
-  "host": "127.0.0.1:8085",
-  "basePath": "/api",
-  "schemes": [
-    "http"
+  "servers": [
+    {
+      "url": "http://127.0.0.1:8085/api"
+    }
   ],
   "paths": {
     "/": {
@@ -101,16 +102,25 @@
         }
       }
     },
-    "/scrap/": {
+    "/scrapping/": {
       "post": {
         "tags": [
           "Scrapping"
         ],
-        "description": "APIs for scrapping.",
+        "description": "API to scrap data from a using URL.",
         "responses": {
-          "200": {
-            "data": "App Home.",
-            "description": "OK"
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/URLToContentsModel"
+              }
+            }
           }
         }
       }
@@ -121,6 +131,23 @@
       "bearerAuth": {
         "type": "http",
         "scheme": "bearer"
+      }
+    },
+    "schemas": {
+      "URLToContentsModel": {
+        "type": "object",
+        "properties": {
+          "urls": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "required": [
+          "urls"
+        ],
+        "additionalProperties": false
       }
     }
   }
